# Sun_Ev_Charging_Hogging_Edgebox

./: CMakeLists.txt  build_and_copy.sh  camera.cpp  camera.h  central.cpp  central.h  common.cpp  common.h  configuration.ini  database.cpp  database.h  ini_parser.cpp  ini_parser.h  log.cpp  log.h  main.cpp  structure.h  timer.cpp  timer.h  version.h
database/: create_database_and_tables.sql
